--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,47 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="app-gti/css/estilos.css">
     <link rel="stylesheet" href="app-gti/css/header.css">
+    <link rel="stylesheet" href="app-gti/css/landing.css">
     <script src="app-gti/js/header.js" defer></script>
+    <script src="app-gti/js/landing.js" defer></script>
 </head>
 <body>
 
 <!-- Header - En el archivo js está el html en sí, según esté logueado se muestra uno y si no lo está otro. -->
 <div id="contenedor-header"></div>
+<!-- Cerramos sección header -->
 
-<h2>Landing Page</h2>
+<!-- Primera seccion -->
+<section class="contenedor">
+    <h1>Innovación en Tecnología Educativa</h1>
+    <p class="parrafo-principal">
+        Ayudamos a instituciones educativas a gestionar sus contenidos a través de módulos intuitivos y fáciles de usar que garantizan una conexión efectiva entre docentes y alumnos.
+    </p>
+
+    <div class="cta-contenedor">
+        <a id="cta" class="btnCTA">Conoce nuestra solución</a>
+    </div>
+</section>
+
+<!-- Segunda seccion -->
+<section class="seccion-diferenciadora">
+    <div class="contenedor-diferenciador">
+        <div class="texto-diferenciador">
+            <h2>¿Quiénes somos?</h2>
+            <p class="parrafo-secundario">
+                GTI es una empresa emergente especializada en el desarrollo de productos digitales para el sector educativo. Nuestro enfoque está en crear herramientas modernas, intuitivas y accesibles que respondan a las necesidades reales de las instituciones académicas.
+            </p>
+            <p class="parrafo-secundario">
+                Actualmente nos encontramos en fase de lanzamiento de nuestro primer producto, PROA, una interfaz de gestión diseñada para mejorar la organización y comunicación interna en entornos educativos.            </p>
+            <p class="parrafo-secundario">
+                Nuestro compromiso es ofrecer soluciones funcionales y efectivas, priorizando la experiencia de usuario y la simplicidad en cada módulo que desarrollamos. GTI nace con la misión de transformar la gestión educativa a través de la tecnología.            </p>
+        </div>
+        <div class="imagen-diferenciador">
+            <img src="app-gti/img/imagenBrainGTI.svg" alt="Personas trabajando en una mesa">
+        </div>
+    </div>
+</section>
+
 
 </body>
 </html>
