--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<!-- Header - En el archivo js está el html en sí, según esté logueado se muestra uno y si no lo está otro. -->
+<!-- Header - En el archivo js está el html en sí, según esté logueado se muestra uno y si no lo está otro -->
 <div id="contenedor-header"></div>
 <!-- Cerramos sección header -->
 
