chore: catalogo actualizado

--- a/src/app-gti/catalogo.html
+++ b/src/app-gti/catalogo.html
@@ -27,7 +27,7 @@
     <section class="modulo">
         <div class="modulo-contenido">
             <div class="logo-proa-container">
-            <img src="/src/app-proa/icons/logoAzul.svg" alt="Logo PROA" class="logo-proa">
+                <img src="/src/app-proa/icons/logoAzul.svg" alt="Logo PROA" class="logo-proa">
             </div>
             <div class="modulo-texto">
                 <h3>PROA</h3>
@@ -39,8 +39,8 @@
                 </p>
             </div>
             <div class="modulo-botones">
-                <button id="btnProbarDemo" class="btnPROA">Probar DEMO</button>
-                <button id="btnSolicitarInfo" class="btnPROA-secundario">Solicitar información</button>
+                <button id="btnProbarDemo" class="btn-oscuros">Probar DEMO</button>
+                <button id="btnVisualizarProd" class="btn-oscuros-secundario">Visualizar Producto</button>
             </div>
         </div>
     </section>
