--- a/src/app-gti/css/estilosGTI.html
+++ b/src/app-gti/css/estilosGTI.html
@@ -10,35 +10,37 @@
 </head>
 <body>
 <div class="contenedor">
-<div class="seccion">
-    <h2>Paleta de colores GTI, popup de cierre de sesión definido en el css</h2>
-    <div class="paleta-colores">
-        <div class="color-box" style="--color: var(--color-principal);">#A03A6F<br>Principal</div>
-        <div class="color-box light" style="--color: var(--color-sombra-imagen);">#C7B2C4<br>Sombra Imagen</div>
-        <div class="color-box light" style="--color: var(--color-fondo-diferenciador);">#F9F9F9<br>Fondo</div>
-        <div class="color-box light" style="--color: var(--color-blancoPuro); border: 1px solid #000;">#FFFFFF<br>Footer Letra</div>
-        <div class="color-box" style="--color: var(--color-footer-fondo);">#101827<br>Fondo Footer</div>
-        <div class="color-box" style="--color: var(--color-textos);">#000000<br>Textos</div>
-        <div class="color-box light" style="--color: var(--color-panelesBordesGris);">#CCCCCC<br>Paneles</div>
+    <div class="seccion">
+        <h2>Paleta de colores GTI, popup de cierre de sesión definido en el css</h2>
+        <div class="paleta-colores">
+            <div class="color-box" style="--color: var(--color-principal);">#A03A6F<br>Principal</div>
+            <div class="color-box light" style="--color: var(--color-sombra-imagen);">#C7B2C4<br>Sombra Imagen</div>
+            <div class="color-box light" style="--color: var(--color-fondo-diferenciador);">#F9F9F9<br>Fondo</div>
+            <div class="color-box light" style="--color: var(--color-blancoPuro); border: 1px solid #000;">#FFFFFF<br>Footer Letra</div>
+            <div class="color-box" style="--color: var(--color-footer-fondo);">#101827<br>Fondo Footer</div>
+            <div class="color-box" style="--color: var(--color-textos);">#000000<br>Textos</div>
+            <div class="color-box light" style="--color: var(--color-panelesBordesGris);">#CCCCCC<br>Paneles</div>
+        </div>
+        <button class="btnCTA">Conoce nuestra solución</button>
+        <button class="btn">Enviar sugerencia</button>
+        <button class="btnCTA-PROA">Probar DEMO</button>
+        <button class="btnPROA">Solicitar información</button>
+        <button class="btnPROA-secundario">Solicitar información</button>
+        <button class="btn btn-principal">Registrarse</button>
+        <button class="btn btn-secundario">Cancelar</button>
+        <button class="btn-oscuros">Haz clic aquí</button>
+        <button class="btn-oscuros-secundario">Haz clic aquí</button>
+
     </div>
-    <button class="btnCTA">Conoce nuestra solución</button>
-    <button class="btn">Enviar sugerencia</button>
-    <button class="btnCTA-PROA">Probar DEMO</button>
-    <button class="btnPROA">Solicitar información</button>
-    <button class="btnPROA-secundario">Solicitar información</button>
-    <button class="btn btn-principal">Registrarse</button>
-    <button class="btn btn-secundario">Cancelar</button>
 
-</div>
-
-<div class="seccion titulares">
-    <h1>Headline 1 - Lora Bold</h1>
-    <h2>Headline 2 - Lora Bold</h2>
-    <h3>Headline 3 - Lato Bold</h3>
-    <h4>Headline 4 - Lato Regular</h4>
-    <h5>Headline 5 - Lato Regular</h5>
-    <h6>Headline 6 - Lato Regular</h6>
-</div>
+    <div class="seccion titulares">
+        <h1>Headline 1 - Lora Bold</h1>
+        <h2>Headline 2 - Lora Bold</h2>
+        <h3>Headline 3 - Lato Bold</h3>
+        <h4>Headline 4 - Lato Regular</h4>
+        <h5>Headline 5 - Lato Regular</h5>
+        <h6>Headline 6 - Lato Regular</h6>
+    </div>
 
     <div class="seccion">
         <p class="parrafo-principal">Este es un párrafo principal: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vel dapibus arcu.</p>
