--- a/src/app-gti/nuevaContrasenya.html
+++ b/src/app-gti/nuevaContrasenya.html
@@ -8,6 +8,7 @@
     <title>Cambiar Contraseña</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/login.css">
     <script src="js/header.js" defer></script>
     <script src="js/nuevaContrasenya.js" defer></script>
@@ -46,6 +47,37 @@
     </form>
 </section>
 <!-- Fin de la sección de cambiar contraseña -->
+<footer>
+    <div class="contenido-footer">
+        <div class="columna-footer">
+            <ul>
+                <li><div><img src="img/logoGTI.svg" alt="logo"></div></li>
+                <li class="parrafo-terciario">Liderando la innovación en tecnología educativa</li>
+            </ul>
+        </div>
+        <div class="columna-footer-contenedor">
+            <div class="columna-footer">
+                <h4>Enlaces Rapidos</h4>
+                <ul>
+                    <li><a class="parrafo-terciario" href="catalogo.html">Catalogo</a></li>
+                    <li><a class="parrafo-terciario" href="preguntasFrecuentes.html">Prgunta Frequentes</a></li>
+                    <li><a class="parrafo-terciario" href="contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+            <div class="columna-footer">
+                <h4>Contacto</h4>
+                <ul>
+                    <li class="parrafo-terciario">Email: info@gti.edu</li>
+                    <li class="parrafo-terciario">Tel: +34 900 123 456</li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+    <div class="derechos parrafo-terciario">
+        © 2025 TuEmpresa. Todos los derechos reservados.
+    </div>
+</footer>
 
 
 </body>
