--- a/src/app-proa/header-proa.html
+++ b/src/app-proa/header-proa.html
@@ -1,9 +1,10 @@
 <!-- Solo el contenido del header, sin html/head/body -->
 <header>
     <div class="header-izquierda">
-        <a href="inicio-asignaturas.html">
+        <a id="logo-proa-link" href="#">
             <img src="/src/app-proa/icons/logoBlanco.svg" alt="Logo PROA" class="logo" />
         </a>
+
     </div>
 
     <div class="header-derecha">
