--- a/src/app-proa/pas/index.html
+++ b/src/app-proa/pas/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="../css/submenu-asignatura.css">
     <script src="../js/header-proa.js" defer></script>
-    <script src="../js/panel-usuario.js" defer></script>
+    <script src="js/panel-pas.js" defer></script>
 
 </head>
 <body>
