--- a/src/app-proa/profesor/index.html
+++ b/src/app-proa/profesor/index.html
@@ -3,14 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HomePage Profesor</title>
-    <link rel="stylesheet" href="../css/estilo.css">
-    <script src="../js/inicio-asignaturas.js" defer></script>
-
+    <title>Inicio Profesor</title>
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/inicio-asignaturas.css">
+    <script src="../js/header-proa.js" defer></script>
+    <script src="js/inicio-profesor.js" defer></script>
 </head>
 <body>
+
+<main class="contenido-principal">
+
+    <!-- Panel de asignaturas -->
+    <section class="panel-asignaturas">
+
+        <div class="bloque-cabecera-asignaturas">
+            <div class="cabecera-titulo">
+                <h3 class="subtitulo-panel titulo-azul asignaturas">Tus asignaturas</h3>
+            </div>
+
+            <!-- Filtros -->
+            <div class="filtros-asignaturas">
+                <button class="boton-favoritas" id="btnFavoritas">
+                    <img src="../icons/favoritos.svg" alt="Favoritas" class="icono-azul" width="16" height="16" />
+                    Favoritas
+                </button>
+
+                <div class="input-con-icono">
+                    <select class="input-base seleccionador-dropdown" id="filtroRol">
+                        <option value="todos">Todos</option>
+                        <option value="responsable">Responsable</option>
+                        <option value="colaborador">Colaborador</option>
+                    </select>
+                    <img src="../icons/dropdown.svg" class="icono-dropdown" alt="Dropdown" />
+                </div>
+
+                <div class="input-con-icono">
+                    <input type="text" class="input-base input-textoBusqueda" id="filtroTexto" placeholder="Nombre de la asignatura..." />
+                    <img src="../icons/search.svg" class="icono-buscador" alt="Buscar" />
+                </div>
+            </div>
+        </div>
+
+        <div id="lista-asignaturas" class="lista-asignaturas"></div>
+    </section>
+
+    <!-- Panel de notificaciones -->
+    <aside class="panel-notificaciones">
+        <h3 class="subtitulo-panel titulo-azul">Últimas notificaciones</h3>
+        <ul id="lista-notificaciones" class="lista-notificaciones"></ul>
+    </aside>
+
+</main>
 
 </body>
 </html>
