--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,11 @@
 
 <!-- Primera seccion -->
 <section class="contenedor">
-    <h1>Innovación en Tecnología Educativa</h1>
-    <p class="parrafo-principal">
-        Ayudamos a instituciones educativas a gestionar sus contenidos a través de módulos intuitivos y fáciles de usar que garantizan una conexión efectiva entre docentes y alumnos.
-    </p>
-
-    <div class="cta-contenedor">
+    <div class="contenido">
+        <h1>Innovación en Tecnología Educativa</h1>
+        <p class="parrafo-principal">
+            Ayudamos a instituciones educativas a gestionar sus contenidos a través de módulos intuitivos y fáciles de usar que garantizan una conexión efectiva entre docentes y alumnos.
+        </p>
         <a id="cta" class="btnCTA">Conoce nuestra solución</a>
     </div>
 </section>
