chore: rediseño de login

--- a/src/app-gti/login.html
+++ b/src/app-gti/login.html
@@ -20,6 +20,8 @@
 <!-- Cerramos sección header -->
 
 <!-- Formulario de inicio de sesión -->
+
+<!-- Parte izquierda imagen -->
 <section class="login-container login-solo">
     <div class="login-imagen">
         <div class="contenido-imagen">
@@ -28,6 +30,7 @@
         </div>
     </div>
 
+    <!-- Parte derecha login -->
     <div class="login-formulario">
         <form class="formulario-login-pagLogin">
             <h2>Iniciar sesión</h2>
