chore: flecha scroll

--- a/src/app-gti/pagProducto.html
+++ b/src/app-gti/pagProducto.html
@@ -32,10 +32,15 @@
         </p>
         <a id="ctaDemo" class="btnCTA-PROA">Probar DEMO</a>
     </div>
+
+    <!-- Flecha scroll -->
+    <a href="#caracteristicas" class="scroll-flecha" aria-label="Ir a la siguiente sección">
+        <img src="icons/flecha-abajoPROA.svg" alt="Desplazar hacia abajo">
+    </a>
 </section>
 
 <!-- Segunda seccion -->
-<section class="caracteristicas-principales">
+<section class="caracteristicas-principales" id="caracteristicas">
     <h2>Características Principales</h2>
     <div class="caracteristicas-grid">
         <div class="caracteristica">
