chore: páginas envueltas con etiqueta main para que el footer no corrompa las páginas

--- a/src/app-gti/contacto.html
+++ b/src/app-gti/contacto.html
@@ -20,6 +20,7 @@
 <!-- Cerramos sección header -->
 
 <!-- Formulario Contacto -->
+<main>
 <section class="contacto">
     <form class="formulario-contacto">
         <h2>Contáctanos</h2>
@@ -95,6 +96,8 @@
         </div>
     </form>
 </section>
+</main>
+
 <!-- Fin de la sección del formulario de contacto -->
 <footer>
     <div class="contenido-footer">
