--- a/src/app-gti/login.html
+++ b/src/app-gti/login.html
@@ -22,6 +22,7 @@
 <!-- Formulario de inicio de sesión -->
 
 <!-- Parte izquierda imagen -->
+<main>
 <section class="login-container login-solo">
     <div class="login-imagen">
         <div class="contenido-imagen">
@@ -56,6 +57,7 @@
         </form>
     </div>
 </section>
+</main>
 <!-- Fin de la sección del formulario de login -->
 
 
