--- a/src/app-gti/nuevaContrasenya.html
+++ b/src/app-gti/nuevaContrasenya.html
@@ -20,6 +20,7 @@
 <!-- Cerramos sección header -->
 
 <!-- Formulario de cambiar contraseña -->
+<main>
 <section class="login">
     <form class="formulario-login">
         <h2>Establecer nueva contraseña</h2>
@@ -46,6 +47,8 @@
         </p>
     </form>
 </section>
+</main>
+
 <!-- Fin de la sección de cambiar contraseña -->
 <footer>
     <div class="contenido-footer">
