--- a/src/app-gti/olvidoContrasenya.html
+++ b/src/app-gti/olvidoContrasenya.html
@@ -20,6 +20,7 @@
 <!-- Cerramos sección header -->
 
 <!-- Formulario de recuperar contraseña -->
+<main>
 <section class="login">
     <form class="formulario-login">
         <h2>Recuperar contraseña</h2>
@@ -41,6 +42,8 @@
         </p>
     </form>
 </section>
+</main>
+
 <!-- Fin de la sección de recuperar contraseña -->
 <footer>
     <div class="contenido-footer">
