--- a/src/app-gti/preguntasFrecuentes.html
+++ b/src/app-gti/preguntasFrecuentes.html
@@ -20,6 +20,7 @@
 <!-- Cerramos sección header -->
 
 <!-- Sección FAQ -->
+<main>
 <section class="faq">
     <h2 class="faq-titulo">Preguntas Frecuentes</h2>
     <div class="faq-contenedor">
@@ -86,12 +87,13 @@
                 <img src="icons/dropdown.svg" alt="Desplegar" class="faq-icono" />
             </button>
             <div class="faq-respuesta">
-                <p class="parrafo-principal">Sí, en el futuro planeamos agregar más módulos educativos, pero por ahora, PROA es el único disponible en nuestro catálogo, ya que es nuestro Producto Mínimo Viable (PMV).</p>
+                <p class="parrafo-principal">Sí, en el futuro planeamos agregar más módulos educativos, pero por ahora, PROA es el único disponible en nuestro catálogo.</p>
             </div>
         </div>
 
     </div>
 </section>
+</main>
 <!-- Fin de la sección de FAQ -->
 <footer>
     <div class="contenido-footer">
