--- a/src/app-gti/registro.html
+++ b/src/app-gti/registro.html
@@ -20,6 +20,7 @@
 <!-- Cerramos sección header -->
 
 <!-- Sección principal de registro -->
+<main>
 <section class="registro">
     <div class="contenedor-registro">
 
@@ -108,6 +109,7 @@
         </form>
     </div>
 </section>
+</main>
 <!-- Fin de la sección del formulario de registro -->
 <footer>
     <div class="contenido-footer">
