--- a/src/app-proa/alumno/index.html
+++ b/src/app-proa/alumno/index.html
@@ -21,29 +21,89 @@
     <!-- Panel de asignaturas -->
     <section class="panel-asignaturas">
         <div class="bloque-cabecera-asignaturas">
-            <div class="cabecera-titulo">
-                <h3 class="subtitulo-panel titulo-azul asignaturas">Tus asignaturas</h3>
+
+            <!-- TÍTULO PRINCIPAL -->
+            <div class="cabecera-superior">
+                <div class="cabecera-titulo">
+                    <h3 class="subtitulo-panel titulo-azul asignaturas">Tus asignaturas</h3>
+                </div>
+
+                <p class="texto-explicativo">
+                    Buscar con filtros, nombre o seleccionando favoritas:
+                </p>
+
             </div>
 
+
+            <!-- FILTROS -->
+            <!-- Filtros agrupados en dos filas -->
             <div class="filtros-asignaturas">
-                <button class="boton-favoritas" id="btnFavoritas">
-                    <img src="../icons/favoritos.svg" alt="Favoritas" class="icono-azul" width="16" height="16" />
-                    Favoritas
-                </button>
-                <div class="input-con-icono">
-                    <input type="text" class="input-base input-textoBusqueda" id="filtroTexto" placeholder="Nombre de la asignatura..." />
-                    <img src="../icons/search.svg" class="icono-buscador" alt="Buscar" />
+
+                <!-- Fila 1 -->
+                <div class="fila-filtros fila-superior">
+                    <div class="input-con-icono">
+                        <input type="text" class="input-base input-textoBusqueda" id="filtroTexto" placeholder="Buscar por nombre / código / número ..." />
+                        <img src="../icons/search.svg" class="icono-buscador" alt="Buscar" />
+                    </div>
+
+                    <button class="boton-favoritas" id="btnFavoritas">
+                        <img src="../icons/favoritos.svg" alt="Favoritas" class="icono-azul" width="16" height="16" />
+                        Favoritas
+                    </button>
                 </div>
+
+                <!-- Fila 2 -->
+                <div class="fila-filtros fila-selects">
+                    <div class="contenedor-select">
+                        <select id="filtroAnyo" class="input-base seleccionador-dropdown">
+                            <option value="">Todos los años</option>
+                            <option value="2024">2024/25</option>
+                            <option value="2023">2023/24</option>
+                        </select>
+                    </div>
+                    <div class="contenedor-select">
+                        <select id="filtroCurso" class="input-base seleccionador-dropdown">
+                            <option value="">Todos los cursos</option>
+                            <option value="1">1º curso</option>
+                            <option value="2">2º curso</option>
+                            <option value="3">3º curso</option>
+                            <option value="4">4º curso</option>
+                        </select>
+                    </div>
+                    <div class="contenedor-select">
+                        <select id="filtroSemestre" class="input-base seleccionador-dropdown">
+                            <option value="">Todos los semestres</option>
+                            <option value="1">1º semestre</option>
+                            <option value="2">2º semestre</option>
+                        </select>
+                    </div>
+                </div>
+
             </div>
+
         </div>
 
         <div id="lista-asignaturas" class="lista-asignaturas"></div>
+        <p id="mensaje-sin-favoritas" class="mensaje-vacio" style="display: none;">
+            Debes seleccionar una asignatura favorita primero. <br> Presiona el icono de favoritos a la derecha de cada asignatura para guardarla como favorita.
+        </p>
+
     </section>
 
-    <!-- Panel de notificaciones -->
     <aside class="panel-notificaciones">
-        <h3 class="subtitulo-panel titulo-azul">Últimas notificaciones</h3>
-        <ul id="lista-notificaciones" class="lista-notificaciones"></ul>
+        <!-- Toggle siempre visible -->
+        <div class="toggle-notificaciones">
+            <label>
+                <input type="checkbox" id="mostrarNotificaciones" checked />
+                Mostrar anuncios
+            </label>
+        </div>
+
+        <!-- Contenido que desaparecerá -->
+        <div id="contenido-notificaciones">
+            <h3 class="subtitulo-panel titulo-azul">Anuncios</h3>
+            <ul id="lista-notificaciones" class="lista-notificaciones"></ul>
+        </div>
     </aside>
 
 </main>
