--- a/src/app-proa/profesor/examenes-profesor.html
+++ b/src/app-proa/profesor/examenes-profesor.html
@@ -1,19 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Inicio Alumno</title>
+  <title>Asignatura Profesor</title>
   <link rel="stylesheet" href="../css/estilos.css">
   <link rel="stylesheet" href="../css/submenu-asignatura.css">
   <script src="../js/header-proa.js" defer></script>
-  <script src="js/asignatura-alumno.js" defer></script>
+  <script src="js/asignatura-profesor.js" defer></script>
 </head>
 <body>
-
 <main class="contenido-wrapper">
+
 
   <!-- Contenido dividido: menú lateral + contenido dinámico -->
   <div class="contenido-principal">
@@ -24,7 +23,6 @@
     </section>
   </div>
 </main>
-
 
 </body>
 </html>
