chore: arreglar input valor

--- a/src/app-proa/profesor/crear-examen-nuevo.html
+++ b/src/app-proa/profesor/crear-examen-nuevo.html
@@ -46,8 +46,13 @@
 
           <div class="parametros">
 
-            <div class="contenedor-peso">
+            <div class="contenedor-valor-peso">
               <label>
+                <span>Valor: *</span>
+                <div>
+                  <input type="text" class="input-base" id="valor-examen" required>
+                </div>
+
                 <span>Peso: *</span>
                 <div>
                   <input type="text" class="input-base" id="peso-examen" required>
