chore: submenu en realizar examenes

--- a/src/app-proa/alumno/realizar-examen.html
+++ b/src/app-proa/alumno/realizar-examen.html
@@ -19,20 +19,11 @@
 
 <main class="contenido-asignatura-wrapper">
 
-  <!-- Cabecera superior con nombre y código de la asignatura -->
-  <section class="cabecera-asignatura">
-    <h2 class="titulo-con-icono titulo-azul">
-      <img src="../icons/book.svg" alt="Icono libro" class="icono-inicio icono-azul" />
-      <span id="titulo-asignatura">Nombre de la asignatura</span>
-    </h2>
-    <p id="codigo-asignatura" class="codigo-asignatura centrado-horizontal"></p>
-  </section>
-
   <!-- Contenido dividido: menú lateral + contenido dinámico -->
   <div class="contenido-principal">
-    <aside id="submenu-asignatura" class="submenu-asignatura"></aside>
+    <aside id="submenu" class="submenu"></aside>
 
-    <section class="panel-asignaturas fondoPanel">
+    <section class="panel-contenido fondoPanel">
 
       <form id="formulario-examen">
         <section class="titulo">
